--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .section-box {
-    background: rgba(0, 0, 0, 0.851);
+    background: rgba(255, 255, 255, 0.851);
     max-width: 800px;
     padding: 30px;
     margin: 30px;
@@ -47,13 +47,13 @@ body {
 }
 
 .section-box h1 {
-    color: #fff;
+    color: #000000;
     font-size: 60px;
     margin-right: 30px;
 }
 
 .section-box h3 {
-    color: #fff;
+    color: #000000;
     font-size: 30px;
     margin-right: 10px;
 }
@@ -69,18 +69,18 @@ body {
 .section-box button {
     background-image: url('magic-wand.png');
     background-size: 60%;
-    background-color: #fff;
+    background-color: #ffffff;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
-    border: 2px solid #fff;
+    border: 3px solid #000000;
     width: 100px;
     height: 100px;
     cursor: pointer;
 }
 
 .section-box p {
-    color: #fff;
+    color: #000000;
     text-align: center;
     font-size: 30px;
 }
